# dapviz

./: .gitignore  Justfile  LICENSE  README.md
.github/workflows/: ci.yml  release-server.yml
editor/visual-studio-code/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
editor/visual-studio-code/src/: downloadBinaries.ts  extension.ts  shared.ts  startSession.ts
editor/visual-studio-code/src/commands/: downloadBinaries.ts  downloadDapviz.ts  endSession.ts  installDebugAdapter.ts  startSession.ts
playground/csharp/: Program.cs  console-export.txt
server/: .prettierignore  index.html  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts
server/src/: App.tsx  Controls.tsx  DapvizProvider.tsx  DebugJsonInfo.tsx  HeapConnections.tsx  HeapConnectionsProvider.tsx  TextBox.tsx  ThemeProvider.tsx  Visualizer.tsx  counter.ts  dap.ts  main.ts  main.tsx
server/src-backend/: Cargo.toml  dev.sh  rust-toolchain.toml
server/src-backend/dap-types/: Cargo.toml
server/src-backend/dap-types/src/: dap_types.rs  display.rs  lib.rs  types.rs  vec_map.rs
server/src-backend/server/: Cargo.toml
server/src-backend/server/src/: dap_client.rs  debug_adapters.rs  main.rs  user_request.rs  webserver.rs
server/src-backend/server/src/dap_states/: dap_state.rs  dap_state_machine.rs  mod.rs  visualization_state.rs
server/src-backend/server/src/dap_states/states/: configuration_done.rs  initialized.rs  mod.rs  program_launched.rs  query_scopes.rs  query_stack_traces.rs  query_threads.rs  query_variables.rs  step.rs  step_in.rs  step_out.rs  uninitialized.rs  wait_for_breakpoint_hit.rs  wait_for_user_input.rs
server/src-backend/src/: main.rs
server/src/components/default/: accordion.tsx  theme.tsx
