[package]
name = "dapviz"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tracing", "macros", "http2", "ws"] }
bytes = "1.7.2"
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

