[workspace]

resolver = "2"

members = [
    "server",
    "dap-types"
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
lto = "fat"
codegen-units = 1

# TODO: re-enable this once spurious crashes stop happening
# strip = "symbols"
strip = "none"
