[package]
name = "dapviz"
version = "0.1.0"
edition = "2024"

[dependencies]

dap-types = { path = "../dap-types" }

anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["tracing", "macros", "http2", "ws"] }
bytes = "1.10.1"
clap = { version = "4.5.45", features = ["derive"] }
serde = { workspace = true}
serde_json = { workspace = true}
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
backoff = { version = "0.4.0", features = ["tokio"] }
enum_dispatch = "0.3.13"
dirs = "6.0.0"
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls-tls"] }
async-trait = "0.1.89"

