[package]
name = "dapviz"
version = "0.1.0"
edition = "2024"

[dependencies]

dap-types = { path = "../dap-types" }

anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["tracing", "macros", "http2", "ws"] }
bytes = "1.11.1"
clap = { version = "4.5.58", features = ["derive"] }
serde = { workspace = true}
serde_json = { workspace = true}
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
enum_dispatch = "0.3.13"
dirs = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls"] }
async-trait = "0.1.89"
itertools = "0.14.0"
dunce = "1.0.5"

