[package]
name = "dapviz"
version = "0.1.0"
edition = "2024"

[dependencies]

dap-types = { path = "../dap-types" }

anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["tracing", "macros", "http2", "ws"] }
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
serde = { workspace = true}
serde_json = { workspace = true}
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
enum_dispatch = "0.3.13"
dirs = "6.0.0"
reqwest = { version = "0.13.4", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls"] }
async-trait = "0.1.89"
itertools = "0.15.0"
dunce = "1.0.5"

